--- a/SixDegreesOfKevinBacon/data/EN_StatsDisplay.html
+++ b/SixDegreesOfKevinBacon/data/EN_StatsDisplay.html
@@ -33,7 +33,7 @@
         </div>
             
         <div id="game_results">
-            <h2 id="game_results_header"></h2>
+            <h2 id="game_results_header">GAME RESULTS</h2>
         
             <ol id="game_results_list"></ol>
         </div>
